cabal-version:      3.0

name:               src

version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Yoelis Acourt
maintainer:         acourt.yoelis@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable src
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base
        , gloss
    hs-source-dirs:   app
    default-language: GHC2021
